[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sshserve"
version = "0.1.0a2"
description = "Userland non-daemon SSH server inheriting current user privileges, with shell, exec, SFTP, and TCP forwarding on POSIX systems."
readme = "README.md"
requires-python = ">=2"
license = "MIT"
authors = [
  { name="Jifeng Wu", email="jifengwu2k@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX",
]
dependencies = [
    "ctypes-unicode-proclaunch",
    "enum34; python_version < '3.4'",
    "fspathverbs",
    "get-unicode-shell",
    "read-unicode-environment-variables-dictionary",
    "paramiko",
    "typing; python_version < '3.5'"
]

[project.urls]
"Homepage" = "https://github.com/jifengwu2k/sshserve"
"Bug Tracker" = "https://github.com/jifengwu2k/sshserve/issues"

[project.scripts]
sshserve = "sshserve:main"
